# Embeded-systems-lab-3

./: .clang-format  .mxproject  CMakeLists.txt  README.md  SDK11M_FT.cfg  SDK1_1_M FTDBG.cfg  SDK_FreeRTOS.ioc  mx.scratch  yar-notes.md
Core/Inc/: FreeRTOSConfig.h  controller.h  coordinate.h  fonts.h  game.h  handlers.h  kb.h  oled.h  randomCoord.h  snake.h  snakeSegment.h
Core/Src/: berry.c  controllerImplementation.c  endScreen.c  fonts.c  freertos.c  game.c  gpio.c  handlers.c  main.c  mainScreen.c  randomCoord.c  sdk_uart.c  snake.c  startScreen.c
include/: berry.h  controller.h  directions.h  font.h  game.h  snake.h  snakeSegment.h
libs/CThreads/: cthreads.c  cthreads.h
src/: controllerImplementation.c  font.c  main.c  oled.c
src/game/: endScreen.c  game.c  mainScreen.c  snake.c  startScreen.c
